--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <link rel="stylesheet" type="text/css" href="project.css">
+    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
   </head>
   <body>
 
