--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -5,6 +5,8 @@
   <h1> SEXUAL HEALTH</h1>
 
   <h2>Alcohol can make you do things you'll regret, including having sex. Find out the risks and how you can keep yourself safe.</h2>
+
+  <h2>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe. </h2>
     
   </head>
   <body>
