--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
-
-  <h1> SEXUAL HEALTH</h1>
-
-  <h2>Alcohol can make you do things you'll regret, including having sex. Find out the risks and how you can keep yourself safe.</h2>
-
-  <h2>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe. </h2>
     
   </head>
   <body>
+
+  <h1> SEXUAL HEALTH</h1>
+
+    <p>Alcohol can make you do things you'll regret, including having sex. Find out the risks and how you can keep yourself safe.</p>
+
+    <p>Cases of sexually transmitted infections (STIs), including HIV, are increasing. If you have unprotected sex, your health is at risk. Find out what symptoms to look out for and how to stay safe. </p>
+
+    <p>Sending sexual messages or sexually explicit pictures of yourself to someone you know might seem harmless, but what happens if these are seen by other people? Find out the facts, the risks and how to protect yourself.</p>
 
   </body>
 </html>
