--- a/physical health.html
+++ b/physical health.html
@@ -6,14 +6,22 @@
   </head>
   
   <body>
-  	<h1>Looking After Your Body</h1>
+  	
+    <h1>Looking After Your Body</h1>
+    
+    <div>
+      <h2>Feeling Poorly?</h2>
+      <p>Get registered with your local health service <a href="https://www.sheffield.ac.uk/health/newregistrations">here</a>! Check out this really useful guide of what do to when you're feeling ill. Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy, they often have <a href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx">everything you need</a>. Make you you know the signs of something more serious here!</p>
+    </div>
 
-  	<h2>Eat Healthy</h2>
+    <div>
+      <h2>Eat Healthy</h2>
+  		<p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy and help you cope with stress and help fight off illnesses so it's important! Check out these great easy recipes that can be cooked for a whole flat or just you! Feeling braver? Try Veganuary! We all love a good party, but make sure you're not drinking to much as this can make you seriously ill, check out this guide.</p>
+    </div>
 
-  		<p>Eating well for cheap at uni can be hard. Check out these great easy recipes that can be cooked for a whole flat or just you! Feeling braver? Try Veganuary!</p>
-
-  	<h2>Exercise</h2>
-
-  		<p>Can't afford a gym membership? There's plenty of free options! Fun runs(link) inspire training or how about getting together with your mates for a workout session (link)</p>
+    <div>
+      <h2>Exercise</h2>
+  		<p>Can't afford a gym membership? There's plenty of free options! Fun runs(link) inspire training or how about getting together with your mates for a workout session (link). Staying fit keeps your mind and body happy!</p>
+    </div>
   
   </body>
