--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
   </head>
   <body>
 
+    <ul class="nav">
+
+      <li>Home</li>
+      <li>About</li>
+      <li>Contact</li>
+
+    </ul>
+
   <h1>HEALTH</h1>
 
   <h2>Physical</h2>
