--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -15,9 +15,9 @@
 
   <ul class="nav">
 
-      <li><a href= "index.html"> </a>Home</li>
-      <li><a href= ""> </a>About</li>
-      <li><a href=""> </a>Contact</li>
+      <li><a href= "file:///C:/Users/Alice/Documents/coding_course/caRmeNNUoS-master/caRmeNNUoS/index.html" </a>Home</li>
+      <li><a href= "#" </a>About</li>
+      <li><a href="#" </a>Contact</li>
 
     </ul>
 
