added pictures and emojis!

--- a/physical health.html
+++ b/physical health.html
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html>
+
+  <style>
+      img {
+      border-radius: 10px;
+      object-fit: contain;
+      overflow: hidden;
+    }
+  </style>
+
   <head>
     <link rel="stylesheet" type="text/css" href="project.css">
-    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="boot-dist/css/bootstrap.css">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   </head>
   
   <body>
   	
-    <h1>Looking After Your Body</h1>
-    
-    <div>
-      <h2>Feeling Poorly?</h2>
-      <p>Get registered with your local health service <a href="https://www.sheffield.ac.uk/health/newregistrations">here</a>! Check out this really useful guide of what do to when you're feeling ill. Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy, they often have <a href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx">everything you need</a>. Make you you know the signs of something more serious here!</p>
-      <img src="https://media.giphy.com/media/za2RiAGIvCzjq/giphy.gif">
+    <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
+  
+  <div class='row'>  
+
+    <div class='col-sm-4'>
+      <h2>Feeling Poorly? <i class="em em-mask"></i></h2>
+      <p>Get registered with your local health service <a href="https://www.sheffield.ac.uk/health/newregistrations">here</a>! Check out this really useful guide of what do to when you're feeling ill. Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i>, they often have <a href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx">everything you need</a>. Make you you know the signs of something more serious here!</p>
+      <img src="images/sick.jpg" class="img-responsive">
     </div>
 
-    <div>
-      <h2>Eat Healthy</h2>
-  		<p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy and help you cope with stress and help fight off illnesses so it's important! Check out these great easy recipes that can be cooked for a whole flat or just you! Feeling braver? Try Veganuary! We all love a good party, but make sure you're not drinking to much as this can make you seriously ill, check out this guide.</p>
-    <img src="https://m.popkey.co/58aca4/dWkoD.gif">
+    <div class='col-sm-4'>
+      <h2>Eat Your Greens! <i class="em em-green_apple"></i></h2>
+      <img src="images/brocolli.jpg" class="img-responsive">
+  		<p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy and help you cope with stress and help fight off illnesses so it's important! Check out these great easy recipes that can be cooked for a whole flat or just you! Feeling braver? Try Veganuary! We all love a good party, but make sure you're not drinking to much as this can make you seriously ill, check out this guide. <i class="em em-beers"></i></p>
     </div>
 
-    <div>
-      <h2>Exercise</h2>
-  		<p>Can't afford a gym membership? There's plenty of free options! Fun runs(link) inspire training or how about getting together with your mates for a workout session (link). Staying fit keeps your mind and body happy!</p>
-    <img src="https://s-media-cache-ak0.pinimg.com/originals/30/ce/31/30ce31da2a388ba5baec7dbc88cc8634.gif">
+    <div class='col-sm-4'>
+      <h2>Get Moving! <i class="em em-running"></i></h2>
+  		<p>Can't afford a gym membership? There's plenty of free options! Fun runs(link) inspire training or how about getting together with your mates for a workout session (link) <i class="em em-dancers"></i>. Staying fit keeps your mind and body happy!</p>
+    <img src="images/running.jpg" class="img-responsive">
     </div>
+
+  </div>
   
   </body>
