--- a/physical health.html
+++ b/physical health.html
@@ -3,10 +3,10 @@
 
   <style>
       img {
-      border-radius: 10px;
-      object-fit: contain;
-      overflow: hidden;
-    }
+        border-radius: 10px;
+        margin: 10px, 0px;
+      }
+ 
   </style>
 
   <head>
@@ -23,22 +23,30 @@
 
     <div class='col-sm-4'>
       <h2>Feeling Poorly? <i class="em em-mask"></i></h2>
-      <p>Get registered with your local health service <a href="https://www.sheffield.ac.uk/health/newregistrations">here</a>! Check out this really useful guide of what do to when you're feeling ill. Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i>, they often have <a href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx">everything you need</a>. Make you you know the signs of something more serious here!</p>
+      <p>Get registered with your local health service <a href="https://www.sheffield.ac.uk/health/newregistrations">here!</a> Download the Health Service app to book appointments or get advise.</p> 
+      <p>Fresher's flu doesn't need to get you down! Save the hassle of getting a doctor's appointment and check out your local pharmacy <i class="em em-pill"></i> they often have <a href="http://www.nhs.uk/Conditions/Flu/Pages/Treatment.aspx">everything you need</a> for common illnesses.</p> 
+      <p>If you're unsure of your symptoms and think it may be more serious then call <strong>NHS 111</strong> for free medical advise.</p>
       <img src="images/sick.jpg" class="img-responsive">
     </div>
 
     <div class='col-sm-4'>
       <h2>Eat Your Greens! <i class="em em-green_apple"></i></h2>
       <img src="images/brocolli.jpg" class="img-responsive">
-  		<p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy and help you cope with stress and help fight off illnesses so it's important! Check out these great easy recipes that can be cooked for a whole flat or just you! Feeling braver? Try Veganuary! We all love a good party, but make sure you're not drinking to much as this can make you seriously ill, check out this guide. <i class="em em-beers"></i></p>
+  		<p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy to help you cope with assignment stress or pesky bugs that go round Uni</p>
+      <p>Check out these <a href="https://studentrecipes.com/">cheap and easy recipes</a> that can be cooked for a whole flat or just you! Fancy a challenge? Try Veganuary- good for you and the environment!</p>
+      <p>We all love a good party, but make sure you're not drinking too much as this can be damaging your body. Check out this guide to help you know your limits. <i class="em em-beers"></i></p>
     </div>
 
     <div class='col-sm-4'>
       <h2>Get Moving! <i class="em em-running"></i></h2>
-  		<p>Can't afford a gym membership? There's plenty of free options! Fun runs(link) inspire training or how about getting together with your mates for a workout session (link) <i class="em em-dancers"></i>. Staying fit keeps your mind and body happy!</p>
+  		<p>Can't afford a gym membership? There's plenty of cheaper options</p> 
+      <p><a href="https://www.bigfunrun.com/sheffield/">Fun runs</a> inspire you to get training or how about getting together with your mates for a <a href="https://www.sport-sheffield.com/fitness-and-wellbeing/s10health/fitness-classes/fitness-class-timetable">workout session</a>. <i class="em em-dancers"></i></p> 
+      <p>Staying fit keeps your mind and body happy!</p>
     <img src="images/running.jpg" class="img-responsive">
     </div>
 
   </div>
   
   </body>
+
+</html>
