added html text

--- a/mental health.html
+++ b/mental health.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <title>Mental health</title>
     <link rel="stylesheet" type="text/css" href="project.css">
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
   </head>
   <body>
+  <h1>"Mens sana in corpore sano"</h1>
+  <div>
+  	<h2>Get informed</h2>
+	<p>Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <u>not alone</u>. Talk to your <b>department</b>, check the <a href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from<a href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b> Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
+	</p>	
+  </div>
+  <div>
+ 	<h2>Talk to someone</h2>
+  	<p>Telling people about your hardships is often a big relief. But if you're afraid or embarrassed to speak to your friends, there are <u>confidential</u> support services where student volunteers will listen to you. Call the <a href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a href="http://www.samaritans.org/"><b>Samaritans</b></a> round the clock at their free number. Another place to look for help, even if you're not a religious person, is the <a href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
+  	</p>
+  </div>
+  <div>
+  	<h1>Professional support</h1>
+  	<p>Sometimes, problems are harder to solve and require professional assistance. There is an unrightful stigma around mental health problems, so you shouldn't feel pressured to power through or wait to hit the bottleneck. There are <u>confidential</u> services at Uni, such as the <a href="https://www.sheffield.ac.uk/ssid/counselling"><b>University Counselling Service</b></a> and the <a href-"http://www.sheffield.ac.uk/health"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <u>dyslexia</u>, so the <a href="https://www.sheffield.ac.uk/ssid/disability"><b>Disability and Dyslexia Support Service</b></a> can help with diagnoses, adjustments and advice for different conditions that you may have.
+  	</p>
+  </div>
   </body>
 </html>
