--- a/mental health.html
+++ b/mental health.html
@@ -8,13 +8,13 @@
   </head>
   <body>
   <div class="container">
-  	 <blockquote><h1>"Mens sana in corpore sano"</h1></blockquote>
+  	 <blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
  	 <div class="row">
   	 <div class='col-sm-4'>
  	 <div>
  	 		<h2>Get informed</h2>
 			<p class="text-justify lead" >
-				Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark>not alone</mark>. Talk to your <mark>department</mark>, check the <a href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from<a href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b> Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
+				Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
 				<img src="images/information.jpg" class="img-circle img-responsive">
 			</p>	
  	 </div>
@@ -23,7 +23,7 @@
  	 <div>
  			<h2>Talk to someone</h2>
   			<p class="text-justify">
-  				Telling people about your hardships is often a big relief. But if you're afraid or embarrassed to speak to your friends, there are <mark>confidential</mark> support services where student volunteers will listen to you. Call the <a href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a href="http://www.samaritans.org/"><b>Samaritans</b></a> round the clock at their free number. Another place to look for help, even if you're not a religious person, is the <a href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
+  				Telling people about your hardships is often a big relief. But if you're afraid or embarrassed to speak to your friends, there are <mark class="second">confidential</mark> support services where student volunteers will listen to you. Call the <a class="text-danger" href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a class="text-danger" href="http://www.samaritans.org/"><b>Samaritans</b></a class="text-danger"> round the clock at their free number. Another place to look for help, even if you're not a religious person, is the <a class="text-danger" href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
   				<img src="images/people.jpg" class="img-circle img-responsive">
 
   			</p>
@@ -33,7 +33,7 @@
  	 <div>
   			<h1>Professional support</h1>
   			<p class="text-justify">
-  				Sometimes, problems are harder to solve and require professional assistance. There is an unrightful stigma around mental health problems, so you shouldn't feel pressured to power through or wait to hit the bottleneck. There are <mark>confidential</mark> services at Uni, such as the <a href="https://www.sheffield.ac.uk/ssid/counselling"><b>University Counselling Service</b></a> and the <a href-"http://www.sheffield.ac.uk/health"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark>dyslexia</mark>, so the <a href="https://www.sheffield.ac.uk/ssid/disability"><b>Disability and Dyslexia Support Service</b></a> can help with diagnoses, adjustments and advice for different conditions that you may have.
+  				Sometimes, problems are harder to solve and require professional assistance. There is an unrightful stigma around mental health problems, so you shouldn't feel pressured to power through or wait to hit the bottleneck. There are <mark class="third">confidential</mark> services at Uni, such as the <a class="text-warning" href="https://www.sheffield.ac.uk/ssid/counselling"><b> Counselling Service</b></a> and the <a class="text-warning" href-"http://www.sheffield.ac.uk/health"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a class="text-warning" href="https://www.sheffield.ac.uk/ssid/disability"><b>Disability and Dyslexia Support Service</b></a> can help with diagnoses, adjustments and advice for different conditions that you may have.
   				<img src="images/hands.jpg" class="img-circle img-responsive">
   			</p>
   		</div>
