--- a/physical health.html
+++ b/physical health.html
@@ -34,7 +34,7 @@
       <img src="images/brocolli.jpg" class="img-responsive">
   		<p>Eating well for cheap at uni can be hard. However, eating well can keep your body healthy to help you cope with assignment stress or pesky bugs that go round Uni</p>
       <p>Check out these <a href="https://studentrecipes.com/">cheap and easy recipes</a> that can be cooked for a whole flat or just you! Fancy a challenge? Try Veganuary- good for you and the environment!</p>
-      <p>We all love a good party, but make sure you're not drinking too much as this can be damaging your body. Check out this guide to help you know your limits. <i class="em em-beers"></i></p>
+      <p>We all love a good party, but make sure you're not drinking too much as this can be damaging your body. Check out this <a href="http://www.nhs.uk/Livewell/alcohol/Pages/alcohol-units.aspx">guide</a> to help you know your limits. <i class="em em-beers"></i></p>
     </div>
 
     <div class='col-sm-4'>
