--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
   </head>
   <body>
 
-    <ul class="nav">
+  <ul class="nav">
 
-      <li>Home</li>
-      <li>About</li>
-      <li>Contact</li>
+      <li><a href= "index.html"> Home</a></li>
+      <li><a href= "sexualhealth.html"> Sexual</a></li>
+      <li><a href="physical health.html"> Physical</a></li>
+      <li><a href="mental health.html"> Mental</a></li>
 
     </ul>
+
 
   <h1>HEALTH</h1>
 
