--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -17,10 +17,10 @@
 
   <ul class="nav">
 
-      <li><a href= "file:///C:/Users/Alice/Documents/coding_course/caRmeNNUoS-master/caRmeNNUoS/index.html"> Home</a></li>
-      <li><a href= "file:///C:/Users/Alice/Documents/coding_course/caRmeNNUoS-master/caRmeNNUoS/sexualhealth.html"> Sexual</a></li>
-      <li><a href="file:///C:/Users/Alice/Documents/coding_course/caRmeNNUoS-master/caRmeNNUoS/physical%20health.html"> Physical</a></li>
-      <li><a href="file:///C:/Users/Alice/Documents/coding_course/caRmeNNUoS-master/caRmeNNUoS/mental%20health.html"> Mental</a></li>
+      <li><a href= "index.html"> Home</a></li>
+      <li><a href= "sexualhealth.html"> Sexual</a></li>
+      <li><a href="/physical%20health.html"> Physical</a></li>
+      <li><a href="mental%20health.html"> Mental</a></li>
 
     </ul>
 
