--- a/physical health.html
+++ b/physical health.html
@@ -15,6 +15,20 @@
   </head>
   
   <body>
+
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Shef Uni Health</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
+        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
+        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
+        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
+      </ul>
+    </div>
+   </nav>
   	
     <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
   
