--- a/index.html
+++ b/index.html
@@ -3,26 +3,24 @@
   <head>
     <link rel="stylesheet" type="text/css" href="project.css">
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   </head>
   <body>
 
-  <ul class="nav">
-
-      <li><a href= "index.html"> Home</a></li>
-      <li><a href= "sexualhealth.html"> Sexual</a></li>
-      <li><a href="physical health.html"> Physical</a></li>
-      <li><a href="mental health.html"> Mental</a></li>
-
+  
+  <nav class="navbar navbar-inverse navbar-fixed-top">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Shef Uni Health</a>
+      </div>
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
+        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
+        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
+        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
     </ul>
-
-
-  <h1>HEALTH</h1>
-
-  <h2>Physical</h2>
-
-  <h2>Mental</h2>
-
-  <h2>Sexual</h2>
+  </div>
+</nav>
 
   </body>
 </html>
