--- a/index.html
+++ b/index.html
@@ -1,26 +1,42 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="project.css">
-    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-  </head>
-  <body>
 
-  
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">Shef Uni Health</a>
-      </div>
+  <head>
+    <link href="boot-dist/css/bootstrap.css" rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="project.css">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+    <script src="boot-dist/js/bootstrap.js"></script>    
+  </head>
+
+<body>
+
+<script>
+$(document).ready(function () {
+$('.dropdown-toggle').dropdown();
+});
+</script>
+
+<nav class="navbar navbar-inverse navbar-static-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">ABC Health</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
         <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
         <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
         <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
-    </ul>
+      </ul>
+    </div>
   </div>
 </nav>
 
-  </body>
+</body>
+
 </html>
