make some changes to the main background
added post it notes and arrange them on the screen

--- a/index.html
+++ b/index.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <link rel="stylesheet" type="text/css" href="project.css">
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
-  </head>
-  <body>
-
-  <ul class="nav">
+</head>
+<body>
+  	<ul class="nav">
 
       <li><a href= "index.html"> Home</a></li>
       <li><a href= "sexualhealth.html"> Sexual</a></li>
       <li><a href="physical health.html"> Physical</a></li>
       <li><a href="mental health.html"> Mental</a></li>
-
-    </ul>
-    <img src="images/blue-postit.jpg">
-
-
-  <h1>HEALTH</h1>
-
-  <h2>Physical</h2>
-
-  <h2>Mental</h2>
-
-  <h2>Sexual</h2>
-
-  </body>
+	</ul>  <h1>HEALTH</h1>
+	<div class="container">
+		<div class="row">
+  	 		<div class='col-sm-4'>
+ 	 			<div class="col1">
+    				<h2>Physical</h2>
+    			</div>
+    		</div>
+    		<div class='col-sm-4'>
+    			<div class="col2">
+  					<h2>Mental</h2>
+  				</div>
+  			</div>
+  			<div class='col-sm-4'>
+  				<div class="col3">
+  					<h2>Sexual</h2>
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+</body>
 </html>
