nav bar, final post its
added a nav bar to my page and finalised post its on front pinboard

--- a/mental health.html
+++ b/mental health.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="project.css">
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
   </head>
   <body>
   <div class="container">
@@ -14,7 +15,7 @@
  	 <div>
  	 		<h2>Get informed</h2>
 			<p class="text-justify lead" >
-				Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
+				Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
 				<img src="images/information.jpg" class="img-circle img-responsive">
 			</p>	
  	 </div>
@@ -23,7 +24,7 @@
  	 <div>
  			<h2>Talk to someone</h2>
   			<p class="text-justify">
-  				Telling people about your hardships is often a big relief. But if you're afraid or embarrassed to speak to your friends, there are <mark class="second">confidential</mark> support services where student volunteers will listen to you. Call the <a class="text-danger" href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a class="text-danger" href="http://www.samaritans.org/"><b>Samaritans</b></a class="text-danger"> round the clock at their free number. Another place to look for help, even if you're not a religious person, is the <a class="text-danger" href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
+  				Telling people about your hardships is often a big relief. But if you're afraid or embarrassed to speak to your friends, there are <mark class="second">confidential</mark> support services where student volunteers will listen to you. Call the <a target="_blank" href="https://www.sheffieldnightline.co.uk/"><b>Nightline</b></a> between 8pm-8am to find a friendly listener or reach the <a target="_blank" href="http://www.samaritans.org/"><b>Samaritans</b></a class="text-danger"> round the clock at their free number. Another place to look for help, even if you're not a religious person, is the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/chaplaincy"><b>Multi-faith Chaplaincy</b></a>.
   				<img src="images/people.jpg" class="img-circle img-responsive">
 
   			</p>
@@ -33,12 +34,33 @@
  	 <div>
   			<h1>Professional support</h1>
   			<p class="text-justify">
-  				Sometimes, problems are harder to solve and require professional assistance. There is an unrightful stigma around mental health problems, so you shouldn't feel pressured to power through or wait to hit the bottleneck. There are <mark class="third">confidential</mark> services at Uni, such as the <a class="text-warning" href="https://www.sheffield.ac.uk/ssid/counselling"><b> Counselling Service</b></a> and the <a class="text-warning" href-"http://www.sheffield.ac.uk/health"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a class="text-warning" href="https://www.sheffield.ac.uk/ssid/disability"><b>Disability and Dyslexia Support Service</b></a> can help with diagnoses, adjustments and advice for different conditions that you may have.
+  				Sometimes, problems are harder to solve and require professional assistance. There is an unrightful stigma around mental health problems, so you shouldn't feel pressured to power through or wait to hit the bottleneck. There are <mark class="third">confidential</mark> services at Uni, such as the <a target="_blank" href="https://www.sheffield.ac.uk/ssid/counselling"><b> Counselling Service</b></a> and the <a target="_blank" href-"http://www.sheffield.ac.uk/health"><b>University Health Service</b></a> (UHS). Also, many students struggle with their courses without realising they may have <mark class="third">dyslexia</mark>, so the <a target="_blank" class="text-sucess" href="https://www.sheffield.ac.uk/ssid/disability"><b>Disability and Dyslexia Support Service</b></a> can help with diagnoses, adjustments and advice for different conditions that you may have.
   				<img src="images/hands.jpg" class="img-circle img-responsive">
   			</p>
   		</div>
   		</div>
   		</div>
   </div>
+  <nav class="navbar navbar-inverse navbar-static-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">ABC Health</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
+        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
+        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
+        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
   </body>
 </html>
