added page background

--- a/physical health.html
+++ b/physical health.html
@@ -8,11 +8,19 @@
   </head>
 
   <style>
+   body {
+     background-image: url("images/notepad.png");
+     background-size: cover;
+     font-family: "arial";
+   }
    img { 
     border-radius: 5px;
-    border: 40px solid #fcfac9;
+    border: 5px solid #fcfac9;
     padding: 0px;  
       }
+    h1 {
+      text-align: center;
+    }
     </style>
   
   <body>
