--- a/physical health.html
+++ b/physical health.html
@@ -5,22 +5,19 @@
     <link rel="stylesheet" type="text/css" href="project.css">
     <link rel="stylesheet" type="text/css" href="boot-dist/css/bootstrap.css">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   </head>
 
   <style>
    body {
      background-image: url("images/notepad.png");
      background-size: cover;
-     font-family: "arial";
    }
    img { 
     border-radius: 5px;
-    border: 5px solid #fcfac9;
+    border: 5px solid black;
     padding: 0px;  
       }
-    h1 {
-      text-align: center;
-    }
     </style>
   
   <body>
