--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -6,23 +6,42 @@
   <title>Sexual Health</title>
 
   <link rel="stylesheet" type="text/css" href="sexualhealth.css">
-
   <link rel="stylesheet" type="text/css" href="project.css">
-
   <link rel= 'stylesheet' type= text/css href= "boot-dist/css/bootstrap.css">
+  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
 </head>
 
 <body>
 
-  <ul class="nav">
+  <nav class="navbar navbar-inverse navbar-static-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">ABC Health</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
+        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
+        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
+        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
 
-      <li><a href= "index.html"> Home</a></li>
-      <li><a href= "sexualhealth.html"> Sexual</a></li>
-      <li><a href="/physical%20health.html"> Physical</a></li>
-      <li><a href="mental%20health.html"> Mental</a></li>
+<script>
+$(document).ready(function () {
+$('.navbar-toggle').dropdown();
+});
+</script>
 
-    </ul>
+<script src="boot-dist/js/bootstrap.js"></script>  
 
   <img src= "http://www.kent.gov.uk/__data/assets/image/0003/47694/sexual-health-web-logo.png">
 
