--- a/index.html
+++ b/index.html
@@ -3,44 +3,13 @@
 <head>
     <link rel="stylesheet" type="text/css" href="project.css">
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
-</head>
-<body>
-  	<ul class="nav">
-
-      <li><a href= "index.html"> Home</a></li>
-      <li><a href= "sexualhealth.html"> Sexual</a></li>
-      <li><a href="physical health.html"> Physical</a></li>
-      <li><a href="mental health.html"> Mental</a></li>
-	</ul>  <h1>HEALTH</h1>
-	<div class="container">
-		<div class="row">
-  	 		<div class='col-sm-4'>
- 	 			<div class="col1">
-    				<h2>Physical</h2>
-    			</div>
-    		</div>
-    		<div class='col-sm-4'>
-    			<div class="col2">
-  					<h2>Mental</h2>
-  				</div>
-  			</div>
-  			<div class='col-sm-4'>
-  				<div class="col3">
-  					<h2>Sexual</h2>
-  				</div>
-  			</div>
-  		</div>
-  	</div>
-</body>
-
-  <head>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-  </head>
-       
-  <body>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+</head>
 
+<body>
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -61,6 +30,8 @@
     </div>
   </div>
 </nav>
+
+</body>
 
 <script>
 $(document).ready(function () {
