--- a/index.html
+++ b/index.html
@@ -3,15 +3,12 @@
 <head>
     <link rel="stylesheet" type="text/css" href="project.css">
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
+    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
 </head>
-<body>
-  	<ul class="nav">
-
-      <li><a href= "index.html"> Home</a></li>
-      <li><a href= "sexualhealth.html"> Sexual</a></li>
-      <li><a href="physical health.html"> Physical</a></li>
-      <li><a href="mental health.html"> Mental</a></li>
-	</ul>  <h1>HEALTH</h1>
+<body>	
+	<h1>HEALTH</h1>
 	<div class="container">
 		<div class="row">
   	 		<div class='col-sm-4'>
@@ -31,16 +28,6 @@
   			</div>
   		</div>
   	</div>
-</body>
-
-  <head>
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
-  </head>
-       
-  <body>
-
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container-fluid">
     <div class="navbar-header">
