--- a/physical health.html
+++ b/physical health.html
@@ -12,6 +12,7 @@
    body {
      background-image: url("images/notepad.png");
      background-size: cover;
+     font-family: 'Gloria Hallelujah', cursive;
    }
    img { 
     border-radius: 5px;
