--- a/index.html
+++ b/index.html
@@ -1,15 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="project.css">
+    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
-    <link rel="stylesheet" type="text/css" href="project.css">
 </head>
-
 <body>	
+	<h1>HEALTH</h1>
+	<div class="container">
+		<div class="row">
+  	 		<div class='col-sm-4'>
+ 	 			<div class="col1">
+    				<h2>Physical</h2>
+    				<img src="images/yellow.png" class="img-responsive">
+    			</div>
+    		</div>
+    		<div class='col-sm-4'>
+    			<div class="col2">
+  					<h2>Mental</h2>
+  					<img src="images/green.png" class="img-responsive">
+  				</div>
+  			</div>
+  			<div class='col-sm-4'>
+  				<div class="col3">
+  					<h2>Sexual</h2>
+  					<img src="images/pink-postit.png" class="img-responsive">
+  				</div>
+  			</div>
+  		</div>
+  	</div>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+
 <nav class="navbar navbar-inverse navbar-static-top">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -30,28 +53,6 @@
     </div>
   </div>
 </nav>
-
-  <h1>HEALTH</h1>
-  <div class="container">
-    <div class="row">
-        <div class='col-sm-4'>
-        <div class="col1">
-            <h2>Physical</h2>
-          </div>
-        </div>
-        <div class='col-sm-4'>
-          <div class="col2">
-            <h2>Mental</h2>
-          </div>
-        </div>
-        <div class='col-sm-4'>
-          <div class="col3">
-            <h2>Sexual</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-
 
 </body>
 
