--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -7,6 +7,7 @@
 
   <link rel="stylesheet" type="text/css" href="project.css">
   <link rel= 'stylesheet' type= text/css href= "boot-dist/css/bootstrap.css">
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
 
 </head>
