--- a/index.html
+++ b/index.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" type="text/css" href="project.css">
+  
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="project.css">
 </head>
+
 <body>	
+
+<nav class="navbar navbar-inverse navbar-static-top">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span> 
+      </button>
+      <a class="navbar-brand" href="#">ABC Health</a>
+    </div>
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav navbar-right">
+        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
+        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
+        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
+        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
 	<h1>HEALTH</h1>
 	<div class="container">
 		<div class="row">
@@ -32,27 +57,6 @@
   		</div>
   	</div>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-
-<nav class="navbar navbar-inverse navbar-static-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span> 
-      </button>
-      <a class="navbar-brand" href="#">ABC Health</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-        <li class="active"><a href="index.html">Home <i class="em em-house_with_garden"></i></a></li>
-        <li><a href= "sexualhealth.html"> Sexual <i class="em em-couplekiss"></i></a></li>
-        <li><a href="physical health.html">Physical <i class="em em-muscle"></i></a></li>
-        <li><a href="mental health.html">Mental <i class="em em-massage"></i></a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
 
 </body>
 
