--- a/physical health.html
+++ b/physical health.html
@@ -66,6 +66,9 @@ $('.navbar-toggle').dropdown();
     </div>
 
   </div>
+
+  <p>Sign up for our monthly newsletter!</p> 
+<input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
   
   </body>
 
