--- a/mental health.html
+++ b/mental health.html
@@ -61,7 +61,9 @@
   		</div>
   		</div>
   </div>
- 
 
+  <p>Sign up for our monthly newsletter!</p> 
+<input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
+ 
   </body>
 </html>
