--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -5,10 +5,10 @@
 
   <title>Sexual Health</title>
 
-  <link rel="stylesheet" type="text/css" href="project.css">
   <link rel= 'stylesheet' type= text/css href= "boot-dist/css/bootstrap.css">
   <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
   <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="project.css">
 
 </head>
 
@@ -43,7 +43,7 @@ $('.navbar-toggle').dropdown();
 
 <script src="boot-dist/js/bootstrap.js"></script>  
 
-  <img src= "http://www.kent.gov.uk/__data/assets/image/0003/47694/sexual-health-web-logo.png" id= 'banner'>
+  <img src= "http://www.kent.gov.uk/__data/assets/image/0003/47694/sexual-health-web-logo.png" class= 'banner'>
 
   <div class= 'row'>
 
