--- a/physical health.html
+++ b/physical health.html
@@ -67,7 +67,7 @@ $('.navbar-toggle').dropdown();
 
   </div>
 
-  <p>Sign up for our monthly newsletter!</p> 
+  <p id= emailbox>Sign up for our monthly newsletter!</p> 
 <input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
   
   </body>
