--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -43,7 +43,7 @@ $('.navbar-toggle').dropdown();
 
 <script src="boot-dist/js/bootstrap.js"></script>  
 
-  <img src= "http://www.kent.gov.uk/__data/assets/image/0003/47694/sexual-health-web-logo.png">
+  <img src= "http://www.kent.gov.uk/__data/assets/image/0003/47694/sexual-health-web-logo.png" id= imgborder>
 
   <div class= 'row'>
 
