--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
-    <link href='boot-dist/js/bootstrap.js'>
+    <script type="text/javascript" href='boot-dist/js/bootstrap.js'></script>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
