--- a/index.html
+++ b/index.html
@@ -65,6 +65,37 @@ $('.navbar-toggle').dropdown();
 });
 </script>
 
+<h1>About us!</h1>
+<p id= 'about'>Who are we?</p>
+<p id= 'about'> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
+
+<div class= "container">
+  <div class= "row">
+    <div class= 'col-sm-4'>
+    <h2>Alice</h2>
+    <img src="images/alice.jpg" class="img-responsive">
+    </div>
+
+    <div class='col-sm-4'>
+      <h2>Beth</h2>
+        <img src="" class="img-responsive">
+    </div>
+
+    <div class= 'col-sm-4'>
+      <h2>Carmen</h2>
+      <img src="" class= "img-responsive">
+    </div>
+
+
+  </div>
+
+
+</div>
+
+
+
+  
+
 </body>
 
 </html>
