center social buttons

--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -88,11 +88,14 @@ $('.navbar-toggle').dropdown();
 <input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
 
     <div id='social-buttons'>
-      <button class='btn-twitter'>Twitter</button>
-      <button class='btn-facebook'>Facebook</button>
-      <button class='btn-pinterest'>Pinterest</button>
+      <div class= "media-buttons">
+        <button class='btn-twitter'>Twitter</button>
+        <button class='btn-facebook'>Facebook</button>
+        <button class='btn-pinterest'>Pinterest</button>
+      </div>
     </div>
-  </div>
+
+
 
 </body>
 </html>
