--- a/index.html
+++ b/index.html
@@ -86,10 +86,16 @@ $('.navbar-toggle').dropdown();
       <img src="" class= "img-responsive">
     </div>
 
-
   </div>
 
+</div>
 
+<div id='social-buttons'>
+  <div class= "media-buttons">
+      <button class='btn-twitter'>Twitter</button>
+      <button class='btn-facebook'>Facebook</button>
+      <button class='btn-pinterest'>Pinterest</button>
+  </div>
 </div>
 
 
