--- a/physical health.html
+++ b/physical health.html
@@ -67,8 +67,16 @@ $('.navbar-toggle').dropdown();
 
   </div>
 
-  <p id= emailbox>Sign up for our monthly newsletter!</p> 
+  <p>Sign up for our monthly newsletter!</p> 
 <input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
+
+<div id='social-buttons'>
+  <div class= "media-buttons">
+      <button class='btn-twitter'>Twitter</button>
+      <button class='btn-facebook'>Facebook</button>
+      <button class='btn-pinterest'>Pinterest</button>
+  </div>
+</div>
   
   </body>
 
