--- a/index.html
+++ b/index.html
@@ -57,13 +57,7 @@
   		</div>
   	</div>
 
-    <script type="text/javascript" href='boot-dist/js/bootstrap.js'></script>
-    <script>
-    $(document).ready(function () {
-    $('.navbar-toggle').dropdown();
-    });
-    </script>
-
+    <script src='boot-dist/js/bootstrap.js'></script>
 </body>
 
 </html>
