--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-  
+
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
     <link href='boot-dist/js/bootstrap.js'>
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Monofett" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="project.css">
 </head>
 
@@ -35,25 +36,37 @@
 </nav>	
 </nav>
 
-	<h1>HEALTH</h1>
+	<h1 id="index-head">ABC HEALTH</h1>
 	<div class="container">
 		<div class="row">
   	 		<div class='col-sm-4'>
  	 			<div class="col1">
-    				<h2>Physical</h2>
-    				<img src="images/yellow.png" class="img-responsive">
+    			<div class="thumbnail text-center">
+          <img src="images/yellow.png" class="img-responsive">
+          <div class="caption">
+        <p class="postit">Physical</p>
+        </div>
+        </div>
     			</div>
     		</div>
     		<div class='col-sm-4'>
     			<div class="col2">
-  					<h2>Mental</h2>
-  					<img src="images/green.png" class="img-responsive">
+  					 <div class="thumbnail text-center">
+          <img src="images/green.png" class="img-responsive">
+          <div class="caption">
+        <p class="postit">Mental</p>
+        </div>
+        </div>
   				</div>
   			</div>
   			<div class='col-sm-4'>
   				<div class="col3">
-  					<h2>Sexual</h2>
-  					<img src="images/pink-postit.png" class="img-responsive">
+  					 <div class="thumbnail text-center">
+          <img src="images/pink-postit.png" class="img-responsive">
+          <div class="caption">
+        <p class="postit">Sexual</p>
+        </div>
+        </div>
   				</div>
   			</div>
   		</div>
