added about us section

--- a/index.html
+++ b/index.html
@@ -79,29 +79,27 @@ $('.navbar-toggle').dropdown();
 });
 </script>
 
+<div class="about">
 <h1>About us!</h1>
-<p id= 'about'>Who are we?</p>
-<p id= 'about'> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
+<p>Who are we?</p>
+<p> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
 
 <div class= "container">
   <div class= "row">
     <div class= 'col-sm-4'>
-    <h2>Alice</h2>
-    <img src="images/alice.jpg" class="img-responsive">
+      <h2 id="label">Alice</h2>
+      <img src="images/alice.jpg" class="img-responsive" id="photo">
     </div>
-
     <div class='col-sm-4'>
-      <h2>Beth</h2>
-        <img src="" class="img-responsive">
+      <h2 id="label">Beth</h2>
+      <img src="images/beth.jpg" class="img-responsive" id="photo">
     </div>
-
     <div class= 'col-sm-4'>
-      <h2>Carmen</h2>
-      <img src="" class= "img-responsive">
+      <h2 id="label">Carmen</h2>
+      <img src="images/carmen.jpg" class= "img-responsive" id="photo">
     </div>
-
   </div>
-
+</div>
 </div>
 
 <div id='social-buttons'>
