--- a/mental health.html
+++ b/mental health.html
@@ -33,9 +33,11 @@
   	 <blockquote class="top"><h1>"Mens sana in corpore sano"</h1></blockquote>
  	 <div class="row">
   	 <div class='col-sm-4'>
- 	 <div>
- 	 		<h2>Get informed</h2>
-			<p class="text-justify lead" >
+ 	 <div class="picture1">
+ 	 	<img src="images/notebookPaper.png" class="img-responsive">
+ 	 		<h2 class="firstpar">Get informed</h2>
+ 	 		
+			<p class="firstpar" >
 				Feeling homesick is normal and most people go through that phase at Uni. But it's important to remember that you are <mark class="first">not alone</mark>. Talk to your <mark class="first">department</mark>, check the <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssid/contacts/advice"><b>Student Advice Centre's website</b></a> or seek help from <a target="_blank" class="text-success" href="https://www.sheffield.ac.uk/ssd/ssg/cwag"><b>Central Welfare and Guidance</b></a> (CWaG). You can be sure that the difficulties you're experiencing now can be dealt with professionally, you don't have to cope with them alone.
 				<img src="images/information.jpg" class="img-circle img-responsive" id="img-border">
 			</p>	
@@ -66,5 +68,5 @@
   <p id= "emailbox">Sign up for our monthly newsletter!</p> 
 <input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
  
-  </body>
+</body>
 </html>
