add jquery to the other html pages and make sure they all have bootstrap referenced at the bottom of the html

--- a/sexualhealth.html
+++ b/sexualhealth.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-
   <title>Sexual Health</title>
-
-  <link rel= 'stylesheet' type= text/css href= "boot-dist/css/bootstrap.css">
-  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-  <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="boot-dist/css/bootstrap.css">
+  <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monofett">
   <link rel="stylesheet" type="text/css" href="project.css">
-
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,14 +33,6 @@
     </div>
   </div>
 </nav>
-
-<script>
-$(document).ready(function () {
-$('.navbar-toggle').dropdown();
-});
-</script>
-
-<script src="boot-dist/js/bootstrap.js"></script>  
 
   <img src= "http://www.kent.gov.uk/__data/assets/image/0003/47694/sexual-health-web-logo.png" id= imgborder>
 
@@ -96,6 +87,6 @@ $('.navbar-toggle').dropdown();
     </div>
 
 
-
+  <script src="boot-dist/js/bootstrap.js"></script>
 </body>
 </html>
