--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-
-    <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-            crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Monofett" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="project.css">
+  <title>ABC Health</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link  rel="stylesheet" href="boot-dist/css/bootstrap.css">
+  <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monofett">
+  <link rel="stylesheet" type="text/css" href="project.css">
+  <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -71,8 +71,6 @@
   	</div>
 
 
-<script src='boot-dist/js/bootstrap.js'></script>
-
 <div class="about">
 <h1>About us!</h1>
 <p>Who are we?</p>
@@ -104,6 +102,7 @@
   </div>
 </div>
 
+    <script src='boot-dist/js/bootstrap.js'></script>
 </body>
 
 </html>
