--- a/mental health.html
+++ b/mental health.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <title>Mental health</title>
+    <title>Mental health</title>
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="project.css">
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   </head>
   <body>
   <nav class="navbar navbar-inverse navbar-static-top">
@@ -73,6 +74,7 @@
       <button class='btn-pinterest'>Pinterest</button>
   </div>
 </div>
- 
+
+    <script src='boot-dist/js/bootstrap.js'></script>
   </body>
 </html>
