--- a/physical health.html
+++ b/physical health.html
@@ -2,10 +2,13 @@
 <html>
 
   <head>
-    <link rel="stylesheet" type="text/css" href="boot-dist/css/bootstrap.css">
-    <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="project.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="boot-dist/css/bootstrap.css">
+      <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah">
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monofett">
+      <link rel="stylesheet" type="text/css" href="project.css">
+      <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -31,12 +34,6 @@
   </div>
 </nav>
 
-<script>
-$(document).ready(function () {
-$('.navbar-toggle').dropdown();
-});
-</script>
-  	
     <h1>Looking After Your Body <i class="em em-muscle"></i></h1>
   
   <div class='row'>  
@@ -77,7 +74,8 @@ $('.navbar-toggle').dropdown();
       <button class='btn-pinterest'>Pinterest</button>
   </div>
 </div>
-  
+
+      <script src='boot-dist/js/bootstrap.js'></script>
   </body>
 
 </html>
