edited about us section, tried to add js

--- a/index.html
+++ b/index.html
@@ -70,39 +70,47 @@
   		</div>
   	</div>
 
+    <div id='social-buttons'>
+      <div class="media-buttons">
+        <button class='btn-twitter'>Twitter</button>
+        <button class='btn-facebook'>Facebook</button>
+        <button class='btn-pinterest'>Pinterest</button>
+      </div>
+    </div>
 
-<div class="about">
-<h1>About us!</h1>
-<p>Who are we?</p>
-<p> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
+  <div class="about">
+    <h1>About us!</h1>
+  <div class="show-description hidden">  
+    <p>Who are we?</p>
+    <p> We are 3 Sheffield University students who believe that health at University is important and wanted to create a website for students to use to gain advice and tips on how to stay healthy whilst at Uni!</p>
 
 <div class= "container">
   <div class= "row">
     <div class= 'col-sm-4'>
       <h2 id="label">Alice</h2>
-      <img src="images/alice.jpg" class="img-responsive" id="photo">
+      <img src="images/alice.jpg" class="center-block img-responsive" id="photo">
     </div>
     <div class='col-sm-4'>
       <h2 id="label">Beth</h2>
-      <img src="images/beth.jpg" class="img-responsive" id="photo">
+      <img src="images/beth.jpg" class="center-block img-responsive" id="photo">
     </div>
     <div class= 'col-sm-4'>
       <h2 id="label">Carmen</h2>
-      <img src="images/carmen.jpg" class= "img-responsive" id="photo">
+      <img src="images/carmen.jpg" class="center-block img-responsive" id="photo">
     </div>
   </div>
 </div>
 </div>
-
-<div id='social-buttons'>
-  <div class= "media-buttons">
-      <button class='btn-twitter'>Twitter</button>
-      <button class='btn-facebook'>Facebook</button>
-      <button class='btn-pinterest'>Pinterest</button>
-  </div>
 </div>
 
-    <script src='boot-dist/js/bootstrap.js'></script>
+<script>
+ $('.about').on('click', function() {
+  $(this).toggleClass('.show-description');
+});
+</script>
+
+<script src='boot-dist/js/bootstrap.js'></script>
+
 </body>
 
 </html>
