--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     			<div class="thumbnail text-center">
           <img src="images/yellow.png" class="img-responsive">
           <div class="caption">
-        <p class="postit">Physical</p>
+        <p class="postit"> <a href= "physical health.html" target="_blank" class="pagenames"> Physical </a></p>
         </div>
         </div>
     			</div>
@@ -52,7 +52,7 @@
   					 <div class="thumbnail text-center">
           <img src="images/green.png" class="img-responsive">
           <div class="caption">
-        <p class="postit">Mental</p>
+        <p class="postit"><a href= "mental health.html" target="_blank" class="pagenames"> Mental </a></p>
         </div>
         </div>
   				</div>
@@ -62,7 +62,7 @@
   					 <div class="thumbnail text-center">
           <img src="images/pink-postit.png" class="img-responsive">
           <div class="caption">
-        <p class="postit">Sexual</p>
+        <p class="postit"><a href= "sexualhealth.html" target="_blank" class="pagenames"> Sexual </a></p>
         </div>
         </div>
   				</div>
@@ -102,6 +102,10 @@
 </div>
 </div>
 </div>
+
+<p class= "signup">Sign up for our monthly newsletter!</p> 
+<input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button>
+
 
 <script>
  $('.about').on('click', function() {
