--- a/physical health.html
+++ b/physical health.html
@@ -64,8 +64,8 @@
 
   </div>
 
-  <p>Sign up for our monthly newsletter!</p> 
-<input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
+  <p id= "signup">Sign up for our monthly newsletter!</p> 
+<input type= "text" name= "textbox" size= "30"/ placeholder="Email Address"> <button type="button">Subscribe</button> 
 
 <div id='social-buttons'>
   <div class= "media-buttons">
