--- a/mental health.html
+++ b/mental health.html
@@ -82,7 +82,7 @@
  	 </div>
   </div>
 
-  <p id= "emailbox">Sign up for our monthly newsletter!</p> 
+  <p id= "signup">Sign up for our monthly newsletter!</p> 
 <input type= "text" name= "textbox" size= "30"/> <button type="button">Subscribe</button> 
 
 <div id='social-buttons'>
