--- a/mental health.html
+++ b/mental health.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mental health</title>
+    <title>Mental Health</title>
     <link href='boot-dist/css/bootstrap.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://afeld.github.io/emoji-css/emoji.css" rel="stylesheet">
