--- a/physical health.html
+++ b/physical health.html
@@ -2,6 +2,7 @@
 <html>
 
   <head>
+      <title>Physical Health</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="boot-dist/css/bootstrap.css">
       <link rel="stylesheet" href="https://afeld.github.io/emoji-css/emoji.css">
