--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     			<div class="thumbnail text-center">
           <img src="images/yellow.png" class="img-responsive">
           <div class="caption" id="index-caption">
-        <p class="postit">Physical</p>
+        <p> <a href= "physical health.html" class="postit"> Physical</p>
         </div>
         </div>
     			</div>
@@ -53,7 +53,7 @@
   					 <div class="thumbnail text-center">
           <img src="images/green.png" class="img-responsive">
           <div class="caption" id="index-caption">
-        <p class="postit">Mental</p>
+        <p> <a href= "mental health.html" class="postit">Mental</p>
         </div>
         </div>
   				</div>
@@ -63,7 +63,7 @@
   					 <div class="thumbnail text-center">
           <img src="images/pink-postit.png" class="img-responsive">
           <div class="caption" id="index-caption">
-        <p class="postit">Sexual</p>
+        <p> <a href= "sexualhealth.html" class="postit">Sexual</p>
         </div>
         </div>
   				</div>
